<resources>
    <string name="app_name">我的农庄</string>
    <string name="search_title">搜索农庄、特产、地区、专题</string>
    <string name="login">登录</string>
    <string name="me">个人</string>
    <string name="search">搜索</string>
    <string name="hot_tag">推荐热词</string>
    <string name="hot_area">区域推荐</string>
    <string name="jieshao">介绍</string>
    <string name="pingjia">评价</string>
    <string name="xuzhi">须知</string>
    <string name="map">导航</string>
    <string name="navigation">导航</string>
    <string name="no_more_data">已经没有更多了</string>
    <string name="loding_more_data">正在加载更多</string>
    <string name="hot_city">推荐地区</string>
    <string name="other_city">其他地区</string>
    <string name="gsp">GPS定位</string>
    <string name="location_now">正在定位</string>
    <string name="location_failed">定位失败</string>
    <string name="choose_ctiy">城市选择</string>
    <string name="farm_set_info">套餐详细</string>
    <string name="topic_desc">专题介绍</string>
    <string name="gua_pai_price">原价:</string>
    <string name="view_farm_set">查看套餐</string>
    <string name="startring_qianggou">抢购中</string>
    <string name="qianggou">立即抢购</string>
    <string name="end_qianggou">已经结束</string>
    <string name="not_start_qianggou">即将开始</string>
    <string name="navigation_line">线路</string>
    <string name="order_it">立即预定</string>
    <string name="buy_number">购买份数</string>
    <string name="order_choose_time">选择时间</string>
    <string name="order_set_info">订单填写</string>
    <string name="order_pay">订单支付</string>
    <string name="other_msg">其他信息</string>
    <string name="contact_name">联系人</string>
    <string name="choose_use_time">请选择使用的时间</string>
    <string name="farm_set_fund">农庄旅游基金</string>
    <string name="need_pay">应付：</string>
    <string name="gen_order">下单</string>
    <string name="order_pay_process">预订流程</string>
    <string name="pay">支付</string>
    <string name="choose">请选择</string>
    <string name="name">姓名</string>
    <string name="name_hit">请填写姓名</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="phone">手机</string>
    <string name="phone_hint">请填写手机号</string>
    <string name="used_contact">常用联系人</string>
    <string name="choose_contact">请先择联系人</string>
    <string name="pay_buy_wallet">钱包余额支付</string>
    <string name="wallet_money">可用余额</string>
    <string name="rmb">元</string>
    <string name="pay_by_wechat">微信支付</string>
    <string name="wechat_pay_desc">使用微信支付，完全便捷</string>
    <string name="qi">起</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="product_info">产品信息:</string>
    <string name="order_time">出游时间:</string>
    <string name="order_money">订单金额:</string>
    <string name="order_actual_money">实付金额:</string>
    <string name="my_order">我的订单</string>
    <string name="my_info">我的信息</string>
    <string name="my_fav">我的收藏</string>
    <string name="my_bank">我的银行卡</string>
    <string name="no_pay">未付款</string>
    <string name="paid">已付款</string>
    <string name="wait_consumption">待消费</string>
    <string name="already_consumption">已消费</string>
    <string name="back_order">退单区</string>
    <string name="order_status_overdue">订单已失败，无法再次支付</string>
    <string name="failed">已失败</string>
    <string name="go_pay">去支付</string>
    <string name="gen_order_text">生成订单</string>
    <string name="order_code">消费码</string>
    <string name="back_order_btn">退单</string>
    <string name="using_order">使用中</string>
    <string name="create">创建</string>
    <string name="use">使用</string>
    <string name="oking">确定中</string>
    <string name="gening_order_pls_wait">正在出单，请耐心等待...</string>
    <string name="comment">评价</string>
    <string name="del">删除</string>
    <string name="order_info">订单详细</string>
    <string name="order_sn">订单编号</string>
    <string name="buy_num">购买份数</string>
    <string name="order_total_money">订单总价</string>
    <string name="order_detail">订单明细</string>
    <string name="order_survey">订单概况</string>
    <string name="farm_fund">农庄旅游基金</string>
    <string name="pay_by_zhifubao">支付宝支付</string>
    <string name="pay_zhifubao_desc">支持各大银行信用卡、储蓄卡</string>
    <string name="pay_by_bank">银联支付</string>
    <string name="pay_bank_desc">支持国内20多家银行储蓄卡</string>
    <string name="contact_delete">删除联系人</string>
    <string name="pls_choose_pay_type">请选择支付方式</string>
    <string name="del_success">删除成功</string>
    <string name="deleting_order_hint">正在为您删除订单</string>
    <string name="hint">提示</string>
    <string name="del_order_hint">你确定要删除此订单么</string>
    <string name="already_aply">已受理</string>
    <string name="refunding">退单中</string>
    <string name="refund_failed">退单失败</string>
    <string name="already_refund">已退款</string>
    <string name="order">订单</string>
    <string name="info">信息</string>
    <string name="favourite">收藏</string>
    <string name="fund">基金</string>
    <string name="all_travel_fund">农庄旅游基金总共:</string>
    <string name="back_order_process">退单进程</string>
    <string name="refund_info">退单详细</string>
    <string name="info_examine">信息审核</string>
    <string name="result">处理结果</string>
    <string name="refund_reason">退单理由</string>
    <string name="submit_refund">提交退单</string>
    <string name="refund_notic">退单须知</string>
    <string name="confirm_refund">确定退单</string>
    <string name="pls_enter_refund_reason">请输入退单理由</string>
    <string name="agree_refund">同意退单</string>
    <string name="admin_examine">客服审核</string>
    <string name="refund_success">已提交退款，请注意查收</string>
    <string name="order_code_title">订单二维码</string>
    <string name="shop_code_hint">让商家扫一扫，完成消费</string>
    <string name="pls_wait_submit_order">正在提交退单申请，请稍后</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码(6-20字符)</string>
    <string name="phone_code">手机验证码</string>
    <string name="register">注册</string>
    <string name="register_notic">点击注册按钮，即表示同意《我的农庄注册协议》</string>
    <string name="get_code">获取验证码</string>
    <string name="pls_enter_phone_number">请输入手机号</string>
    <string name="pls_enter_password">请输入6~20位的密码</string>
    <string name="pls_enter_code">请输入正确的验证码</string>
    <string name="go_to_zhifubao">正在跳转支付宝，请稍后</string>
    <string name="login_now">正在登录，请稍后</string>
    <string name="user_info_num">我的信息总数</string>
    <string name="user_favourite_num">我的收藏总数</string>
    <string name="user_fund_num">旅游基金总数</string>
    <string name="is_cancel_refund">您确定要取消该退单申请么？</string>
    <string name="favourite_success">已收藏</string>
    <string name="setting">设置</string>
    <string name="forget_pwd_title">忘记密码</string>
    <string name="register_plz_wait">正在注册，请稍后</string>
    <string name="register_success">注册成功</string>
    <string name="forget_pwd_plz_wait">正在重置密码，请稍后</string>
    <string name="forget_pwd_success">重置成功</string>
    <string name="forget_pwd_btn">确定重置</string>
    <string name="change_name">修改昵称</string>
    <string name="change_pwd">修改登录密码</string>
    <string name="update_app">应用更新</string>
    <string name="clear_cache">清除缓存数据</string>
    <string name="about_app">关于[我的农庄]</string>
    <string name="login1">立即登录</string>
    <string name="login_out">安全退出</string>
    <string name="cancel_favourite">已取消</string>
    <string name="old_price">原价</string>
    <string name="fast_pay">快速买单</string>
    <string name="gen_ordering">正在为您下单，请稍后...</string>
    <string name="farm_name">农庄名称</string>
    <string name="order_notic">订单由中国人民财产保险股份有限公司承担食品安全保险</string>
    <string name="plz_enter_money">请输入正确的金额</string>
    <string name="pay_money">消费金额</string>
    <string name="send_comment">套餐点评</string>
    <string name="enter_comment">请输入您的点评...</string>
    <string name="comment_start">星级评价</string>
    <string name="comment_btn">评论</string>
    <string name="choose_photo">选择图片</string>
    <string name="save">保存</string>
    <string name="user_name">昵称</string>
    <string name="user_name_hint">昵称评价时显示</string>
    <string name="plz_enter_username">请输入昵称</string>
    <string name="change_success">修改成功</string>
    <string name="changing_name">正在为您修改昵称，请稍后</string>
    <string name="order_pay_success">订单支付成功</string>
    <string name="order_pay_failed">支付失败</string>
    <string name="change_pwd_title">修改密码</string>
    <string name="up">起</string>
    <string name="fund_money_text">旅游基金</string>
    <string name="gongxi_facai">恭喜发财</string>
    <string name="comment_success">评论成功</string>
    <string name="commen_plz_wait">正在评论,请稍后</string>
    <string name="agree_auth">请先同意我的农庄注册协议</string>
    <string name="user_comment">您对该套餐的评价</string>
    <string name="comment_success_upload_img">评论成功,图片将在上传完成后显示</string>
    <string name="change_user_pic">修改头像</string>
    <string name="upload_pic_failed">上传失败,请稍后再试</string>
    <string name="share_content">我收藏很久的一个好地方,现在推荐给您</string>
    <string name="no_order">没有相关订单</string>
    <string name="no_package">没有红包可用</string>
    <string name="no_ms">没有相关消息</string>
    <string name="go_watch">去逛逛</string>
    <string name="no_favourite">没有相关收藏</string>
    <string name="line_distance">直线距离</string>
</resources>
