<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/header_user_setting"></include>

        <RelativeLayout
            android:id="@+id/change_user_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">


                <ImageView
                    style="@style/user_btn_style"
                    android:src="@mipmap/change_user_pic" />

                <TextView
                    style="@style/user_setting_text_style"
                    android:text="@string/change_user_pic" />

            </LinearLayout>

            <ImageView
                android:id="@+id/user_pic"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:src="@mipmap/head" />
        </RelativeLayout>

        <View style="@style/line" />

        <LinearLayout
            android:id="@+id/change_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/user_btn_style"
                android:src="@mipmap/change_name" />

            <TextView
                style="@style/user_setting_text_style"
                android:text="@string/change_name" />
        </LinearLayout>

        <View style="@style/line" />

        <LinearLayout
            android:id="@+id/change_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/user_btn_style"
                android:src="@mipmap/change_pwd" />

            <TextView
                style="@style/user_setting_text_style"
                android:text="@string/change_pwd" />
        </LinearLayout>

        <View style="@style/line" />

        <LinearLayout
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/user_btn_style"
                android:src="@mipmap/app_update" />

            <TextView
                style="@style/user_setting_text_style"
                android:text="@string/update_app" />
        </LinearLayout>

        <View style="@style/line" />

        <LinearLayout
            android:id="@+id/clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                style="@style/user_btn_style"
                android:src="@mipmap/clear_cache" />

            <TextView
                style="@style/user_setting_text_style"
                android:text="@string/clear_cache" />
        </LinearLayout>

        <View style="@style/line" />

        <RelativeLayout
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true">

                <ImageView
                    style="@style/user_btn_style"
                    android:src="@mipmap/about_app" />

                <TextView
                    style="@style/user_setting_text_style"
                    android:text="@string/about_app" />
            </LinearLayout>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View style="@style/line" />

        <TextView
            android:id="@+id/login_out_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_bg"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login_out"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>