<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ECECEC"
            android:padding="10dp"
            android:text="@string/order_survey"
            android:textColor="#858585"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/order_sn"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/order_sn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/green2"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView style="@style/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/order_survey"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/buy_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/green2"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView style="@style/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/order_total_money"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/order_total_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/green2"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ECECEC"
            android:padding="10dp"
            android:text="@string/order_detail"
            android:textColor="#858585"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/farm_set_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ECECEC"
            android:padding="10dp"
            android:text="@string/other_msg"
            android:textColor="#858585"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/contact_name"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/green2"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView style="@style/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/farm_fund"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fund"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green2"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
