<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/line"
        android:orientation="vertical"
        android:layout_above="@+id/view1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/farm_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/farm_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/order_process_seleted_bg"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_money"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/quick_pay_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="numberDecimal"
                android:textColor="@color/order_process_seleted_bg"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/pls_choose_pay_type"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.egceo.app.myfarm.order.view.PayTypeView
            android:id="@+id/pay_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.egceo.app.myfarm.order.view.PayTypeView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/order_notic"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:background="#e5ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="4dp">

        <TextView
            style="@style/line"
            android:layout_marginBottom="4dp" />

        <Button
            android:id="@+id/quick_pay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/details_btn1"
            android:minHeight="@dimen/button_min_height"
            android:minWidth="@dimen/button_min_width"
            android:text="@string/pay"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>
