<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/order_item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="#c9c9c9" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/order_total_money"
                android:textColor="#c9c9c9" />

            <TextView
                android:id="@+id/order_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff5e36" />
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/refund_notic"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <include layout="@layout/layout_refund_notic" />

    <View
        style="@style/line"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/refund_reason"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:padding="10dp"
        android:id="@+id/refund_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@color/white"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:gravity="top|left"
        android:lines="4"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View style="@style/line" />

    <Button
        android:id="@+id/submit_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_btn_bg"
        android:minHeight="@dimen/button_min_height"
        android:minWidth="100dp"
        android:padding="10dp"
        android:text="@string/confirm_refund"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>
